[gd_scene load_steps=5 format=2]

[ext_resource path="res://actors/platform_actors/pickup_character.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 32 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 24, 24 )

[node name="pickup_character" type="Area2D" groups=[
"player",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="body" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="neck_right" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 24, -64 )
shape = SubResource( 2 )

[node name="head_right" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 32, -88 )
shape = SubResource( 3 )

[node name="head_left" type="CollisionShape2D" parent="." index="3"]

position = Vector2( -31, -88 )
shape = SubResource( 3 )
disabled = true

[node name="neck_left" type="CollisionShape2D" parent="." index="4"]

position = Vector2( -24, -64 )
shape = SubResource( 2 )
disabled = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]


